update text colors

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a class="portfolio-box" href="https://ukacz.shinyapps.io/distributions/">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.png"/>
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">shiny</div>
+                                <div class="project-category text-white-70">shiny</div>
                                 <div class="project-name">teaching stats with shiny: distributions</div>
                             </div>
                         </a>
@@ -79,7 +79,7 @@
                         <a class="portfolio-box" href="https://ukacz.shinyapps.io/asymptotics/">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.png"/>
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">shiny</div>
+                                <div class="project-category text-white-70">shiny</div>
                                 <div class="project-name">teaching stats with shiny: asymptotics</div>
                             </div>
                         </a>
@@ -88,17 +88,17 @@
                         <a class="portfolio-box" href="https://github.com/ursulakaczmarek/PUI2018_uak211/blob/master/HW8_uak211/viz.R">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.png">
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">ggplot</div>
+                                <div class="project-category text-white-70">ggplot</div>
                                 <div class="project-name">foil request of nyc's voters: charting the rise of independents</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                        <a class="portfolio-box" href="https://bl.ocks.org/ursulakaczmarek/raw/531690907823120f73293a0398221d23/">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.gif" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-70">d3.js</div>
+                                <div class="project-name">nyc auto smash-and-grabs</div>
                             </div>
                         </a>
                     </div>
