--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://github.com/ursulakaczmarek/PUI2018_uak211/blob/master/HW8_uak211">
+                        <a class="portfolio-box" href="https://github.com/ursulakaczmarek/accel.plotly/blob/master/viz.R">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.png">
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-70">ggplot</div>
