--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://tiny.cc/nyctrash">
+                        <a class="portfolio-box" href="https://output.jsbin.com/wagujug/1">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.gif"/>
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-70">d3.js</div>
