--- a/index.html
+++ b/index.html
@@ -116,20 +116,20 @@
                 <div class="row justify-content-center">
                     <div class="col-md-1 ml-auto mb-lg-0">
                       <a href="https://github.com/ursulakaczmarek">
-                        <i class="fab fa-github fa-3x mb-3 text-muted" ></i>
+                        <i class="fab fa-github fa-fw mb-3 text-muted" ></i>
                       </a>
                     </div>
                     <div class="col-md-1 ml-auto mr-auto">
                       <a href="https://twitter.com/ukacz">
-                        <i class="fab fa-twitter fa-3x mb-3 text-muted"></i></a>
+                        <i class="fab fa-twitter fa-fw mb-3 text-muted"></i></a>
                     </div>
                     <div class="col-md-1 ml-auto mr-auto">
                       <a rel="me" href="https://data-folks.masto.host/@ursula">Mastodon</a>
-                        <i class="fab fa-mastodon fa-3x mb-3 text-muted"></i></a>
+                        <i class="fab fa-mastodon fa-fw mb-3 text-muted"></i></a>
                     </div>
                     <div class="col-md-1 mr-auto">
                       <a href="mailto:ursula.kaczmarek@gmail.com">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
+                        <i class="fas fa-envelope fa-fw mb-3 text-muted"></i></a>
                     </div>
                 </div>
             </div>
