--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       </a>
                     </div>
                     <div class="col-md-1 ml-auto mr-auto">
-                      <a rel="me" href="https://fosstodon.org/@ursula"></a>
+                      <a rel="me" href="https://fosstodon.org/@ursula">
                         <i class="fab fa-mastodon fa-3x mb-3 text-muted"></i></a>
                     </div>
                     <div class="col-md-1 mr-auto">
