--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://bl.ocks.org/ursulakaczmarek/raw/531690907823120f73293a0398221d23/">
+                        <a class="portfolio-box" href="https://gist.github.com/ursulakaczmarek/531690907823120f73293a0398221d23">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.gif" alt="" />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-70">d3.js</div>
