--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://github.com/ursulakaczmarek/accel.plotly/blob/master/viz.R">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.png">
+                        <a class="portfolio-box" href="https://output.jsbin.com/piciseq">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.gif">
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-70">ggplot</div>
-                                <div class="project-name">foil request of nyc's voters: charting the rise of independents</div>
+                                <div class="project-category text-white-70">d3.js</div>
+                                <div class="project-name">manhattan uber trips: force-directed network graph</div>
                             </div>
                         </a>
                     </div>
