--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ursula kaczmarek</title>
+        <title>ursula</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -44,7 +44,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-lowercase text-white">ursula kaczmarek</h1>
+                        <h1 class="text-lowercase text-white">ursula@democracy.works</h1>
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <h2 class="text-white-75 font-weight-light mb-5">data science and visualization</h2>
@@ -102,7 +102,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://gist.github.com/ursulakaczmarek/531690907823120f73293a0398221d23">
+                        <a class="portfolio-box" href="https://gist.github.com/ursulams/531690907823120f73293a0398221d23">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.gif" alt="" />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-70">d3.js</div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-1 ml-auto mb-lg-0">
-                      <a href="https://github.com/ursulakaczmarek">
+                      <a href="https://github.com/ursulams">
                         <i class="fab fa-github fa-3x mb-3 text-muted" ></i>
                       </a>
                     </div>
@@ -132,7 +132,7 @@
                         <i class="fab fa-mastodon fa-3x mb-3 text-muted"></i></a>
                     </div>
                     <div class="col-md-1 mr-auto">
-                      <a href="mailto:ursula.kaczmarek@gmail.com">
+                      <a href="mailto:ursula@democracy.works">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i></a>
                     </div>
             </div>
