--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-lowercase text-white">ursula@democracy.works</h1>
+                        <h1 class="text-lowercase text-white">ursula kaczmarek</h1>
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <h2 class="text-white-75 font-weight-light mb-5">data science and visualization</h2>
