--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://ukacz.shinyapps.io/b38_viz/">
+                        <a class="portfolio-box" href="https://ursulams.shinyapps.io/b38_viz/">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.gif"/>
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-70">shiny</div>
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://ukacz.shinyapps.io/distributions/">
+                        <a class="portfolio-box" href="https://ursulams.shinyapps.io/distributions/">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.png"/>
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-70">shiny</div>
@@ -84,7 +84,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://ukacz.shinyapps.io/asymptotics/">
+                        <a class="portfolio-box" href="https://ursulams.shinyapps.io/asymptotics/">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.png"/>
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-70">shiny</div>
