add jsbin output

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ursula</title>
+        <title>ursula kaczmarek</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -102,7 +102,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://gist.github.com/ursulams/531690907823120f73293a0398221d23">
+                        <a class="portfolio-box" href="https://output.jsbin.com/qumituc">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.gif" alt="" />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-70">d3.js</div>
